# lrsc

./: .env.default  .gitignore  LICENSE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
dsc/: .env.default  config.sample.json
learninglocker-deployment/: .env.default  node8.learninglocker.Dockerfile
lrs-connector/: Dockerfile  README.md  pyproject.toml
lrs-connector/src/: main.py
pdc/: .env.default  config.sample.json  pdc.Dockerfile
